--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
         <strong>We're sorry but this app doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong>
     </noscript>
-    <div id="app">hello</div>
+  <div id="app">
+        <div id="left" style="height:200px;background-color:red;"> jhshdhksjadhkj</div>
+        <div id="mid"> </div>
+        <div id="right"> </div>
+    </div>
    
 </body>
 
